undid bootstrap's vertical align in images. caused alignment issues

--- a/Back_End (Flask)/static/login_style.css
+++ b/Back_End (Flask)/static/login_style.css
@@ -99,3 +99,7 @@ nav {
   background: #6ae6a8;
   transition: 0.5s ease;
 }
+
+svg {
+  vertical-align: unset !important;
+}
